Fix warnings / improve logging. Handle some cases where properties were not loading on upgrade.